projects/compiler/test/parser/import_error_alias_bad_alias.out
Error at %FILE_NAME%:1:19
Unexpected token 'int', expected 'identifier':
  |  import "./abc" as 123
                       ^